--- a/BlogSystem/BlogSystem/Content/Site.css
+++ b/BlogSystem/BlogSystem/Content/Site.css
@@ -9,6 +9,10 @@
     padding-right: 15px;
 }
 
+.navbar-collapse {
+    float:right;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
