--- a/BlogSystem/BlogSystem/Views/Home/Index.cshtml
+++ b/BlogSystem/BlogSystem/Views/Home/Index.cshtml
@@ -2,15 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron" id="jumbo">
+    <h1>Блог</h1>
+    <p class="lead">Добре дошли в блога на магазина за канцеларски материали.</p>
+    <p><a href="/Home/About" class="btn btn-primary btn-lg">Повече за блога &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>За първи път сте тук ?</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
