Added PostsController with CRUD operations, Post views for posts and automatic migrations. Deleted About.cshtml view.

--- a/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
+++ b/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Постове", "Post", "Posts")</li>
+                    <li>@Html.ActionLink("Начална страница", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Нова статия", "Create", "Posts")</li>
+                    <li>@Html.ActionLink("Статии", "Index", "Posts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
