--- a/BlogSystem/BlogSystem/Views/Home/About.cshtml
+++ b/BlogSystem/BlogSystem/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Относно";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h3>@ViewBag.Message</h3>*@
 
 <p>Добре дошли в блога към магазина за канцеларски материали.</p>
