--- a/BlogSystem/BlogSystem/Views/Home/Index.cshtml
+++ b/BlogSystem/BlogSystem/Views/Home/Index.cshtml
@@ -12,20 +12,18 @@
     <div class="col-md-4">
         <h2>За първи път сте тук ?</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Необходимо е да се регистрирате, за да споделяте идеи и мнение относно продуктите.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Account/Register">Регистрирай се &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Вече сте регистриран ?</h2>
+        <p>Използвайте същестуващата Ви регистрация.</p>
+        <p><a class="btn btn-default" href="/Account/Login">Вход &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Искате да се върнете в магазина ?</h2>
+        <p>Лесно и бързо можете да направите поръчка.</p>
+        <p><a class="btn btn-default" href="http://localhost/basic_softUni/softUniTeamWork/web/index.php">Към магазина &raquo;</a></p>
     </div>
 </div>
