--- a/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
+++ b/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Постове", "Post", "Posts")</li>
+                    <li>@Html.ActionLink("Нова статия", "Create", "Posts")</li>
+                    <li>@Html.ActionLink("Стаии", "Index", "Posts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
