--- a/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
+++ b/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li><a href="http://localhost/basic_softUni/softUniTeamWork/web/">Магазин</a></li>
                     <li>@Html.ActionLink("Нова статия", "Create", "Posts")</li>
                     <li>@Html.ActionLink("Стаии", "Index", "Posts")</li>
                 </ul>
