--- a/BlogSystem/BlogSystem/Views/Posts/Index.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<BlogSystem.Models.Post>
+﻿@*@model IEnumerable<BlogSystem.Models.Post>*@
+@model PagedList.IPagedList<BlogSystem.Models.Post>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Index";
@@ -9,19 +12,32 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm("Index", "Posts", FormMethod.Get))
+{
+    <p>
+        Търсене по заглавие или име на автор: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.ActionLink("Заглавие", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
+            @*@Html.DisplayNameFor(model => model.Title)*@
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Body)
+            Текст
+            @*@Html.DisplayNameFor(model => model.Body)*@
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Author)
+            Автор
+            @*@Html.DisplayNameFor(model => model.Author)*@
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Date)
+            @Html.ActionLink("Дата", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
+            @*@Html.DisplayNameFor(model => model.Date)*@
         </th>
         <th></th>
     </tr>
@@ -58,3 +74,9 @@
 }
 
 </table>
+
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
