Some cosmetic changes.

--- a/BlogSystem/BlogSystem/Views/Posts/Delete.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model BlogSystem.Models.Post
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Изтриване на статия";
 }
 
-<h2>Delete</h2>
+<h2>Изтриване</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Сигурен ли си, че искаш да изтриеш това?</h3>
 <div>
     <h4>Post</h4>
     <hr />
@@ -42,7 +42,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Назад към статии", "Index")
         </div>
     }
 </div>
