--- a/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BlogSystem.Models.Post
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Детайли за статия";
 }
 
-<h2>Details</h2>
+<h2>Детайли</h2>
 
 <div>
     <h4>Post</h4>
