--- a/BlogSystem/BlogSystem/Views/Posts/Edit.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Edit.cshtml
@@ -2,10 +2,10 @@
 
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Промяна на статия";
 }
 
-<h2>Edit</h2>
+<h2>Промяна на статия</h2>
 
 
 @using (Html.BeginForm())
