--- a/BlogSystem/BlogSystem/Views/Posts/Index.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Index.cshtml
@@ -4,13 +4,13 @@
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Статии";
 }
 
-<h2>Index</h2>
+<h2>Статии</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Нова статия", "Create")
 </p>
 
 @using (Html.BeginForm("Index", "Posts", FormMethod.Get))
