--- a/BlogSystem/BlogSystem/Views/Account/Login.cshtml
+++ b/BlogSystem/BlogSystem/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BlogSystem.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Вход";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -38,11 +38,11 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Влез" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Регистрирай нов профил", "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
