--- a/BlogSystem/BlogSystem/Views/Posts/Create.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Нова статия</h2>
 
 
 @using (Html.BeginForm()) 
@@ -40,7 +40,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назад към статии", "Index")
 </div>
 
 @section Scripts {
