--- a/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
@@ -57,6 +57,6 @@
 </div>
 <p>
     @Html.ActionLink("Промени", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Добави коментар", "Comment") |
+    @Html.ActionLink("Добави коментар", "Create", "Comments") |
     @Html.ActionLink("Назад към статии", "Index")
 </p>
