--- a/BlogSystem/BlogSystem/Views/Posts/Index.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Index.cshtml
@@ -48,7 +48,7 @@
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Body)
+            @Html.Raw(item.Body)
         </td>
         <td>
             @if (item.Author != null)
