--- a/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
@@ -48,6 +48,6 @@
 </div>
 <p>
     @Html.ActionLink("Промени", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Comment", "Create", "Comments", new { id = Model.Id }, null) |
+    @Html.ActionLink("Добави коментар", "Create", "Comments", new { id = Model.Id }, null) |
     @Html.ActionLink("Назад към статии", "Index")
 </p>
