--- a/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
+++ b/BlogSystem/BlogSystem/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Нова статия", "Create", "Posts")</li>
-                    <li>@Html.ActionLink("Стаии", "Index", "Posts")</li>
+                    <li>@Html.ActionLink("Статии", "Index", "Posts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
