Cosmetics on comments

--- a/BlogSystem/BlogSystem/Content/Site.css
+++ b/BlogSystem/BlogSystem/Content/Site.css
@@ -47,3 +47,10 @@ textarea {
     opacity: .35;
 
 }
+.user_name{
+    font-size:14px;
+    font-weight: bold;
+}
+.comments-list .media{
+    border-bottom: 1px dotted #ccc;
+}
