Proper comments display

--- a/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
+++ b/BlogSystem/BlogSystem/Views/Posts/Details.cshtml
@@ -42,7 +42,7 @@
         </dd>
 
     </dl>
-    
+    <a href="#">Има @Model.Comments.Count коментара</a>
     @Html.DisplayFor(model => model.Comments)
     
 </div>
